# SVD-project

./: CMakeLists.txt  Config.cmake.in  Contibutors.md  README.md  flake.nix
benchmarks/TestingResultsBundle_08-04-2025-190940/: idea_3_MRRR_table.csv
benchmarks/TestingResultsBundle_10-04-2025-212706/: reference_JacobiSVD_table.txt
benchmarks/ideas-25-03-30-v1.0/: idea_1_GivRef_table.csv  idea_3_MRRR_table.csv  reference_JacobiSVD_table.csv  reference_JacobiSVD_table.txt
benchmarks/ideas-25-04-06-v1.0_1/: old_idea_3_MRRR_table.csv
benchmarks/ideas-25-04-06-v1.1-BROKEN_GivRef/: idea_1_GivRef_table.csv
docs/benchmarks/TestingResultsBundle<08-04-2025-190940>/: idea_1_GivRef_table.txt  idea_3_MRRR_table.txt  reference_JacobiSVD_table.csv  reference_JacobiSVD_table.txt  v0_GivRef_table.csv
docs/benchmarks/TestingResultsBundle<10-04-2025-212706>/: idea_1_GivRef_table.csv  idea_1_GivRef_table.txt  reference_JacobiSVD_table.csv  v0_GivRef_table.txt
docs/benchmarks/ideas-25-03-30-v1.0/: idea_1_GivRef_table.txt  idea_2_RevJac_table.csv
docs/benchmarks/ideas-25-04-06-v1.0_1/: new_idea_3_MRRR_table.csv  new_idea_3_MRRR_table.txt  new_individual_test_times.txt  new_reference_JacobiSVD_table.csv  new_reference_JacobiSVD_table.txt  old_idea_1_GivRef_table.txt  old_idea_3_MRRR_table.txt  old_individual_test_times.txt  old_reference_JacobiSVD_table.csv  old_reference_JacobiSVD_table.txt
docs/benchmarks/ideas-25-04-06-v1.1-BROKEN_GivRef/: individual_test_times.txt  reference_JacobiSVD_table.csv  v0_idea_1_GivRef_table.csv
docs/ideas/: glossary.tex  ideas.tex  main.tex  references.bib  settings.tex
documentation/: ideas.tex  main.tex  references.bib
src/: config.h.in  dqds.h  generate_svd.cpp  generate_svd.h  givens_refinement.cpp  givens_refinement.h  givens_refinement.hpp  gui.cpp  gui.h  iterative_refinement.cpp  iterative_refinement.h  jacobi.cpp  jacobi.h  main.cpp  mrrr.cpp  mrrr.h  mrrr.hpp  reverse_jacobi.cpp  reverse_jacobi.h  reverse_jacobi.hpp  test_main.cpp  testing.cpp  testing.h
src/benchmarks/: compare_csv.py
src/benchmarks/TestingResultsBundle<08-04-2025-190940>/: individual_test_times.txt  v0_GivRef_table.txt
src/benchmarks/TestingResultsBundle<10-04-2025-212706>/: individual_test_times.txt  v0_GivRef_table.csv
src/benchmarks/TestingResultsBundle_08-04-2025-190940/: idea_1_GivRef_table.csv
src/benchmarks/ideas-25-03-30-v1.0/: idea_2_RevJac_table.txt  idea_3_MRRR_table.txt  individual_test_times.txt
src/benchmarks/ideas-25-04-06-v1.0_1/: new_idea_1_GivRef_table.csv  new_idea_1_GivRef_table.txt  old_idea_1_GivRef_table.csv
src/benchmarks/ideas-25-04-06-v1.1-BROKEN_GivRef/: idea_1_GivRef_table.txt  reference_JacobiSVD_table.txt  v0_idea_1_GivRef_table.txt
src/deprecated/GolubKahanSVD/: GolubKahanSVD.cpp
src/legacy/: v0_givens_refinement.h  v0_givens_refinement.hpp
src/lib/: SVD_project.h
src/lib/deprecated/dqds/: dqds.h
src/lib/deprecated/iterative_refinement/: iterative_refinement.h
src/lib/deprecated/jacobi/: jacobi.h
src/lib/idea1_givref/: givens_refinement.h  givens_refinement.hpp
src/lib/idea1_givref/legacy/: v0_generate_svd.h  v0_givens_refinement.h  v0_givens_refinement.hpp  v1_givens_refinement.h  v1_givens_refinement.hpp
src/lib/idea2_revjac/: pseudo_reverse_jacobi.h  pseudo_reverse_jacobi.hpp  reverse_jacobi.h  reverse_jacobi.hpp
src/lib/idea2_revjac/legacy/: v0_reverse_jacobi.h  v0_reverse_jacobi.hpp
src/lib/idea3_naive/: naive_mrrr.h  naive_mrrr.hpp
src/lib/idea3_naive/legacy/: v0_naive_mrrr.h  v0_naive_mrrr.hpp
src/lib/idea3_naive/naive_bidiag_svd/: naive_bidiag_svd.h  naive_bidiag_svd.hpp
src/lib/idea3_naive/naive_golub_kahan_svd/: tgk_inverse.h  tgk_inverse.hpp
src/lib/tests/: SVD_Test.h  SVD_Test.hpp  SVD_Test_config.h  generate_svd.h
src/slepc/: CMakeLists.txt  Makefile
src/slepc/algo_reviews/: Cross.md  Elemental.md  Lanczos bidiagonalization with explicit restart.md  cyclic.md  rsvd.md  scalapack.md  svdprimme.md
src/standalone/: Пояснение к коду.docx
src/standalone/v1/: CMakeLists.txt
src/standalone/v1/src/: config.h.in  generate_svd.cpp  generate_svd.h  iterative_refinement_1.cpp  iterative_refinement_1.h  iterative_refinement_1.hpp  iterative_refinement_4.cpp  iterative_refinement_4.h  iterative_refinement_4.hpp  iterative_refinement_5.h  iterative_refinement_5.hpp  iterative_refinement_6.cpp  iterative_refinement_6.h  iterative_refinement_6.hpp  iterative_refinement_8.h  iterative_refinement_8.hpp  testing_algo5.cpp  testing_algo8.cpp  testing_all.cpp
src/standalone/v2_d2/: CMakeLists.txt
src/standalone/v2_d2/src/: iterative_refinement_1.h  iterative_refinement_1.hpp  iterative_refinement_4.cpp  iterative_refinement_4.h  iterative_refinement_4.hpp  iterative_refinement_5.cpp  iterative_refinement_5.h  iterative_refinement_5.hpp  iterative_refinement_6.cpp  iterative_refinement_6.h  iterative_refinement_6.hpp  iterative_refinement_8.cpp  iterative_refinement_8.h  iterative_refinement_8.hpp  svd_types.h  test_cases_20_24.cpp  test_cases_25_29.cpp  test_cases_30_35.cpp  test_cases_36_40.cpp  test_cases_41_45.cpp  test_cases_46_50.cpp  test_cases_51_55.cpp  test_cases_56_60.cpp  test_cases_61_65.cpp  test_cases_66_70.cpp  test_cases_71_75.cpp  test_cases_76_80.cpp  test_cases_81_85.cpp  test_cases_86_90.cpp  test_cases_91_95.cpp  test_cases_96_100.cpp  test_common.cpp  test_common.h  testing_all.cpp
src/standalone/v2_double/: CMakeLists.txt
src/standalone/v2_double/src/: generate_svd.cpp  generate_svd.h  iterative_refinement_1.h  iterative_refinement_1.hpp  iterative_refinement_4.cpp  iterative_refinement_4.h  iterative_refinement_4.hpp  iterative_refinement_5.cpp  iterative_refinement_5.h  iterative_refinement_5.hpp  iterative_refinement_6.h  iterative_refinement_6.hpp  iterative_refinement_8.cpp  iterative_refinement_8.h  iterative_refinement_8.hpp  svd_types.h  testing_algo1.cpp  testing_algo4.cpp  testing_algo6.cpp  testing_all.cpp
src/tests/: SVD_Test.h  SVD_Test.hpp
